front_end/ui/legacy/toolbar.css
/*
 * Copyright (c) 2014 The Chromium Authors. All rights reserved.
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file.
 */

:host {
  flex: none;
  padding: 0 2px;

  --toolbar-height: 26px;
}

.toolbar-shadow {
  position: relative;
  white-space: nowrap;
  height: var(--toolbar-height);
  overflow: hidden;
  display: flex;
  flex: none;
  align-items: center;
  z-index: 0;
}

.toolbar-shadow.wrappable {
  flex-wrap: wrap;
  overflow: visible;
}

.toolbar-shadow.toolbar-grow-vertical {
  height: initial;
}

.toolbar-shadow.vertical {
  flex-direction: column;
  height: auto;
  align-items: flex-start;
}

.toolbar-item {
  position: relative;
  display: flex;
  background-color: transparent;
  flex: none;
  align-items: center;
  justify-content: center;
  padding: 0;
  height: var(--toolbar-height);
  border: none;
  white-space: pre;
  overflow: hidden;
  max-width: 100%;
}

devtools-adorner.fix-perf-icon {
  --override-adorner-text-color: transparent;
  --override-adorner-border-color: transparent;
  --override-adorner-background-color: transparent;
}

.toolbar-item,
.toolbar-item .devtools-link {
  color: var(--icon-default);
}

.toolbar-shadow.vertical .toolbar-item {
  height: auto;
  min-height: var(--toolbar-height);
  white-space: normal;
}

devtools-issue-counter.toolbar-item {
  margin-top: -4px;
  padding-left: 1px;
}

devtools-issue-counter.main-toolbar {
  margin-top: 1px;
  margin-left: 1px;
  margin-right: 1px;
}

.toolbar-dropdown-arrow {
  pointer-events: none;
  flex: none;
  top: 1px;
}

.toolbar-button.dark-text .toolbar-dropdown-arrow {
  color: var(--sys-color-on-surface);
}

select.toolbar-item:disabled + .toolbar-dropdown-arrow {
  opacity: 50%;
}
/* Toolbar item */

.toolbar-button {
  white-space: nowrap;
  overflow: hidden;
  min-width: 28px;
  background: transparent;
  border-radius: 0;

  &[aria-haspopup="true"][aria-expanded="true"] {
    pointer-events: none;
  }
}

.toolbar-item-search {
  min-width: 5.2em;
  max-width: 300px;
  flex: 1 1 auto;
  justify-content: start;
  overflow: revert;
}

.toolbar-text {
  margin: 0 5px;
  flex: none;
  color: var(--ui-text);
}

.toolbar-text:empty {
  margin: 0;
}

.toolbar-has-dropdown {
  justify-content: space-between;
  height: var(--sys-size-9);
  padding: 0 var(--sys-size-3) 0 var(--sys-size-5);
  gap: var(--sys-size-2);
  border-radius: var(--sys-shape-corner-extra-small);

  &:hover::after,
  &:active::before {
    content: "";
    height: 100%;
    width: 100%;
    border-radius: inherit;
    position: absolute;
    top: 0;
    left: 0;
  }

  &:hover::after {
    background-color: var(--sys-color-state-hover-on-subtle);
  }

  &:active::before {
    background-color: var(--sys-color-state-ripple-neutral-on-subtle);
  }

  &:focus-visible {
    border: 2px solid var(--sys-color-state-focus-ring);
  }

  &[disabled] {
    pointer-events: none;
    background-color: var(--sys-color-state-disabled-container);
    color: var(--sys-color-state-disabled);
  }
}

.toolbar-has-dropdown-shrinkable {
  flex-shrink: 1;
}

.toolbar-has-dropdown .toolbar-text {
  margin: 0;
  text-overflow: ellipsis;
  flex: auto;
  overflow: hidden;
  text-align: right;
}

.toolbar-render-as-links * {
  font-weight: initial;
  color: var(--sys-color-primary);
  text-decoration: underline;
  cursor: pointer;
}

.toolbar-render-as-links button {
  height: 15px;
  margin: 2px;
}

.toolbar-render-as-links button:focus-visible {
  outline: auto 5px -webkit-focus-ring-color;
}

:not(.toolbar-render-as-links) .toolbar-button:not(.toolbar-has-dropdown):focus-visible::before {
  position: absolute;
  top: 2px;
  bottom: 2px;
  left: 2px;
  right: 2px;
  background-color: var(--sys-color-state-focus-highlight);
  border-radius: 2px;
  content: "";
  /* This ::before rule serves as a background for an element.
  Setting z-index to make sure it's always below the content. */
  z-index: -1;
}

.toolbar-glyph {
  flex: none;
}
/* Button */

.toolbar-button:disabled {
  opacity: 50%;
}

/* Two of the buttons are special in the main toolbar: the close button needs to
be fixed to the right so it never goes out of the viewport even if other items
push it. And the main menu button next to it that needs to make some space for
it. */
.toolbar-button.close-devtools {
  position: absolute;
  right: 0;
}

:host-context(.right) .toolbar-button.main-menu,
:host-context(.left) .toolbar-button.main-menu,
:host-context(.bottom) .toolbar-button.main-menu {
  margin-inline-end: 28px;
}

.toolbar-button.copied-to-clipboard::after {
  content: attr(data-content);
  position: fixed;
  margin-top: calc(2 * var(--toolbar-height));
  padding: 3px 5px;
  color: var(--sys-color-token-subtle);
  background: var(--sys-color-cdt-base-container);
  animation: 2s fade-out;
  font-weight: normal;
  border: 1px solid var(--sys-color-divider);
  border-radius: 3px;
}

@keyframes fade-out {
  from {
    opacity: 100%;
  }

  to {
    opacity: 0%;
  }
}

.toolbar-button.toolbar-state-on .toolbar-glyph {
  color: var(--icon-toggled);
}

.toolbar-state-on.toolbar-toggle-with-dot .toolbar-text::after {
  content: "";
  position: absolute;
  bottom: 2px;
  background-color: var(--sys-color-primary-bright);
  width: 4.5px;
  height: 4.5px;
  border: 2px solid var(--override-toolbar-background-color, --sys-color-cdt-base-container);
  border-radius: 50%;
  right: 0;
}

.toolbar-button.toolbar-state-on.toolbar-toggle-with-red-color .toolbar-glyph,
.toolbar-button.toolbar-state-off.toolbar-default-with-red-color .toolbar-glyph {
  color: var(--icon-error) !important; /* stylelint-disable-line declaration-no-important */
}

.toolbar-button:not(.toolbar-has-glyph):not(.toolbar-has-dropdown):not(.largeicon-menu):not(.toolbar-button-secondary) {
  font-weight: bold;
}

.toolbar-button.dark-text .toolbar-text {
  color: var(--sys-color-on-surface) !important;  /* stylelint-disable-line declaration-no-important */
}
/* ... */

